Done with only student homepage, added filters and search working on stud + ta

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -895,19 +895,23 @@ hr {
     margin-top: 10vh;
 }
 
-.notification-section {
+.notification-section-35 {
     min-height: 35vh;
     max-height: 35vh;
+    overflow: auto;
+}
+
+.notification-section-47 {
+    min-height: 56vh;
+    max-height: 56vh;
     overflow: auto;
 }
 
 .ticket-single {
     color: $text-color-def !important;
     padding: 5px;
-    margin-right: 7px;
-    margin-left: 7px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    width: 100%;
+    overflow: hidden;
     font-size: 1em;
     border-color: darken($text-color-def, 5%);
     border: 1px solid;
@@ -915,6 +919,18 @@ hr {
 
 .ticket-single:hover {
     opacity: 0.7;
+}
+
+.ticket-container {
+    min-height: 70vh;
+    max-height: 70vh;
+    overflow: auto;
+}
+
+.ticket-container-small {
+    min-height: 40vh;
+    max-height: 40vh;
+    overflow: auto;
 }
 
 .courses-section {
@@ -928,12 +944,13 @@ hr {
 }
 
 .create-ticket-section1 {
-    margin-top: 2vh;
+    margin-top: 2.4vh;
 }
 
 .create-ticket-section2 {
-    min-height: 13vh;
-    max-height: 13vh;
+    min-height: 12vh;
+    max-height: 12vh;
+    margin-bottom: -4px;
     display:flex;
     align-items: center;
     justify-content: center;
