--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -492,10 +492,8 @@ a.list-course:hover, a.list-course:focus {
 }
 div.notification-container {
     background-color: rgba(255,255,255,.5);
-    box-shadow: 0 2px 4px 0 rgba(50,50,93,.1);
     height: 100%;
     max-height:60vh;
-    overflow-y: scroll;
 }
 
 div.homescreen-container {
@@ -876,12 +874,20 @@ hr {
    border-bottom: 1px solid #ffffff;
 }
 
+.email-running {
+    color: lighten(green, 10%) !important;
+}
+.email-not-running {
+    color: $text-color-def;
+}
+
+
 .wrapper {
     min-height: 100vh;
 }
 
 .welcome-header {
-    padding: 5vh;
+    padding: 2vh;
     justify-content: center;
 }
 
@@ -912,6 +918,13 @@ hr {
 .course-container-medium {
     min-height: 29vh;
     max-height: 29vh;
+    overflow: auto;
+}
+
+.course-container-half {
+    min-height: 27vh;
+    margin-top: 2vh;
+    max-height: 27vh;
     overflow: auto;
 }
 
